[package]
name = "example"
version = "0.1.0"
authors = ["Janito Vaqueiro Ferreira Filho <janito.vff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezrpc = { path = ".." }
futures = "0.3"
tokio = { version = "1", features = ["sync"] }
tower = { version = "0.4", features = ["util"] }
